fixing alignment in profile

--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -17,7 +17,7 @@
     align-items: center;
     padding: 0;
     justify-content: center;
-    margin-left: 1rem;
+    margin-left: 4rem;
     /* gap:2rem; */
 }
 
@@ -80,7 +80,7 @@
 }
 
 span {
-    margin: 0.3rem;
+    margin-right: 0.3rem;
 }
 
 .txt-container  div{
@@ -99,6 +99,6 @@ span {
 }
 
 .tag-container{
-    margin: 0.5rem;
+    /* margin: 0.5rem; */
 }
 
